vitrail-pg-macros/tests/ui/fail/update_helper_unsupported_operator.stderr
error: unsupported `where` operator `gt` for scalar field `published` in update helper for model `post`; only `eq`, `in`, `null`, and `{ not: ... }` are currently supported
  --> tests/ui/fail/update_helper_unsupported_operator.rs:5:1
   |
 5 | / schema! {
 6 | |     name update_helper_schema
 7 | |
 8 | |     model user {
...  |
22 | | }
   | |_^
...
25 |       let _ = update! {
   |  _____________-
26 | |         crate::update_helper_schema,
27 | |         post {
28 | |             data: {
...  |
37 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `__vitrail_update_where_field_filter_update_helper_schema_post` which comes from the expansion of the macro `update` (in Nightly builds, run with -Z macro-backtrace for more info)
